# caribou

./: .coveragerc  .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  QUICK_START.md  README.md  TEARDOWN.md  TESTING.md  TROUBLESHOOTING.md  app.py  prepare_solver.sh  pyproject.toml  pytest.xml
.github/actions/go/: action.yml
.github/actions/poetry/: action.yml
.github/workflow/: workflow.yaml
.github/workflows/: workflow.yaml
benchmarks/: README.md  caribou_paper_benchmark_inputs.md
benchmarks/FEM_simulation/: app.py  requirements.txt
benchmarks/FEM_simulation/.caribou/: config.yml
benchmarks/bert/: accuracy-squad.py  app.py  create_squad_data.py  pytorch_SUT.py  requirements.txt  squad_QSL.py
benchmarks/dna_visualization/: app.py  readme.md  requirements.txt
benchmarks/dna_visualization/.caribou/: config.yml  iam_policy.json
benchmarks/dna_visualization/.multi-x-serverless/: config.yml
benchmarks/experiments/carbon_intensity_configs/: README.md  experiment.ipynb  invoke_serverless_function_uniform.sh
benchmarks/experiments/wrapper_overhead/: README.md  plot.ipynb  run.ipynb  setup.ipynb
benchmarks/image_processing/: LICENSE  app.py  readme.md  requirements.txt
benchmarks/image_processing/.caribou/: config.yml  iam_policy.json
benchmarks/image_processing/.multi-x-serverless/: config.yml  iam_policy.json
benchmarks/image_processing_light/: app.py  readme.md  requirements.txt
benchmarks/image_processing_light/.multi-x-serverless/: config.yml
benchmarks/lambda_ml/: app.py  requirements.txt
benchmarks/lambda_ml/.caribou/: config.yml  iam_policy.json
benchmarks/map_reduce/: app.py  readme.md  requirements.txt
benchmarks/map_reduce/.caribou/: config.yml  iam_policy.json
benchmarks/map_reduce/.multi-x-serverless/: config.yml  iam_policy.json
benchmarks/markdown2html/: app.py  encoded_example_md.txt  example.md  readme.md  requirements.txt
benchmarks/markdown2html/.multi-x-serverless/: config.yml
benchmarks/markdown_to_html/: LICENSE  app.py  readme.md  requirements.txt
benchmarks/markdown_to_html/.caribou/: config.yml
benchmarks/py_aes/: app.py  readme.md  requirements.txt
benchmarks/py_aes/.multi-x-serverless/: config.yml
benchmarks/rag_data_ingestion/: app.py  readme.md  requirements.txt
benchmarks/rag_data_ingestion/.caribou/: config.yml  iam_policy.json
benchmarks/rag_data_ingestion_i/: app.py
benchmarks/rag_data_ingestion_i/.caribou/: config.yml
benchmarks/regression_tuning/: app.py  readme.md  requirements.txt
benchmarks/regression_tuning/.multi-x-serverless/: config.yml  iam_policy.json
benchmarks/small_sync_example/: app.py  readme.md  requirements.txt
benchmarks/small_sync_example/.multi-x-serverless/: config.yml  iam_policy.json
benchmarks/solve_benchmarks/: solve_benchmarks.py  solver_benchmarks.py
benchmarks/solver_benchmarks/: benchmark_remote_client.py  run_solver_benchmarks.py  run_solver_benchmarks_multiprocess.py  solver_benchmarks.py
benchmarks/text_2_speech_censoring/: LICENSE  app.py  readme.md  requirements.txt
benchmarks/text_2_speech_censoring/.caribou/: config.yml  iam_policy.json
benchmarks/text_2_speech_censoring/.multi-x-serverless/: config.yml  iam_policy.json
benchmarks/video_analytics/: .gitignore  app.py  readme.md  requirements.txt
benchmarks/video_analytics/.caribou/: config.yml  iam_policy.json
benchmarks/video_analytics/.multi-x-serverless/: config.yml
caribou-go/: .gitignore  README.md  build_caribou.sh  build_caribou_no_tests.sh  caribou.py  go.mod  go.sum
caribou-go/src/deployment-input/: inputmanager.go
caribou/common/: constants.py  provider.py  utils.py
caribou/deployment_solver/: workflow_config.py
caribou/endpoint/: client.py
caribou/monitors/: deployment_manager.py  deployment_migrator.py  deployment_optimization_monitor.py  monitor.py
caribou/routing/: workflow_config.py  workflow_config_schema.py
caribou/syncers/: direct_transmission_data.py  execution_data.py  execution_to_successor_data.py  indirect_transmission_data.py  log_sync_workflow.py  log_syncer.py  transmission_data.py  workflow_run_sample.py
deployment/: .gitignore  deploy_to_aws.py
docs/: README_AWS_LAMBDA.md  aws_lambda.md  component_interaction.md  design.md  iam_policies.md  metrics_manager.md  node_naming_scheme.md  remote_cli_development.md  source_code_annotation.md  synchronization_node.md  test.md  tmp.json
examples/small_sync_example/: readme.md
integration_tests/: deploy.py  run_function.py  run_integration_tests.py  run_test_data_collect.py  run_test_deploy.py  run_test_solve_and_redeploy.py  test_deploy.py
integration_tests/integration_test_workflow/: app.py  requirements.txt
integrationtests/: deploy.py  readme.md  run_integration_tests.py
integrationtests/integration_test_workflow/: app.py
multi_x_serverless/common/: constants.py  provider.py  setup_tables.py  utils.py
multi_x_serverless/data_collector/: carbon_collector.py  data_collector.py  performance_collector.py  performance_collectorpy  provider_collector.py  setup.py  workflow_collector.py
multi_x_serverless/data_collectors/: carbon_collector.py  data_collector.py
multi_x_serverless/deployment/: readme.md
multi_x_serverless/endpoint/: client.py
multi_x_serverless/global_routing/: main.py
multi_x_serverless/monitors/: deployment_optimization_monitor.py  function_deployment_monitor.py  monitor.py
multi_x_serverless/playground/: main.py
multi_x_serverless/routing/: workflow_config.py  workflow_config_schema.py
multi_x_serverless/syncers/: datastore_syncer.py  log_sync_workflow.py  log_syncer.py  transmission_data.py  workflow_run_sample.py
multi_x_serverless/update_checkers/: deployment_update_checker.py  solver_update_checker.py  update_checker.py
plotting/: latencies.py  readme.md  runtimes.py  solver_benchmark.py  solver_benchmark_heatmap.py  solver_benchmark_plotting.py
scripts/: compliance.sh  deploy_to_aws.py  free_aws_resources.sh  manage_deployments_script.py  new_deployment_script.py
test/test_workflow/: app.py
(+943 files in other folders)
