[tool.poetry]
name = "multi-x-serverless"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = [
    "Viktor Gsteiger <vgsteiger@student.ethz.ch>",
    "Daniel Long <pinlong@student.ubc.ca>",
    "Mohammad Shahrad <mohammad.shahrad@ubc.ca>",
]
readme = "README.md"
repository = "https://github.com/ubc-cirrus-lab/multi-x-serverless"

[tool.poetry.scripts]
multi_x_serverless = "multi_x_serverless.deployment.client.multi_x_serverless:main"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
boto3 = "^1.34.5"
jsonschema = "^4.20.0"
googlemaps = "^4.10.0"
bs4 = "^0.0.1"
chalice = "^1.30.0"
google-auth = "^2.25.2"
google-cloud-storage = "^2.14.0"
google-cloud-compute = "^1.15.0"
numpy = "^1.26.2"
networkx = "^3.2.1"
levenshtein = "^0.23.0"
pandas = "^2.1.4"
tqdm = "^4.66.1"
click = "^8.1.7"
pydantic = "^2.5.2"

[tool.poetry.extras]
# This can be used for a more fine-grained dependency management in the future

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
pytest = "^7.4.3"
coverage = "^7.3.4"
mypy = "^1.7.0"
types-pyyaml = "^6.0.12.12"
types-jsonschema = "^4.20.0.0"
isort = "^5.12.0"
setuptools = "^69.0.2"
black = "^23.11.0"
pylint = "^3.0.2"
pytest-cov = "^4.1.0"
types-requests = "^2.31.0.10"
seaborn = "^0.13.0"
httpie = "^3.2.2"
gtts = "^2.5.0"
profanity = "^1.1"
pydub = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3

[tool.coverage.run]
branch = true
omit = [
    "**/*/__init__.py"
    ]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.mypy]
python_version = "3.10"
mypy_path = "multi_x_serverless"
check_untyped_defs = true
disallow_untyped_defs = true
follow_imports = "skip"
ignore_missing_imports = true
pretty = true
exclude = [
    "multi_x_serverless/tests"
    ]

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
extend_skip_glob = [
    "**/*/__init__.py",
    "**/tests/**",
    "**/*.pyi",
    "**/*.pyc"
    ]

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | ./multi_x_serverless/deployment/client/cli/template/app.py
)/
'''

[tool.pylint]
max-line-length = 120
disable = [
      "C0116",  # Missing function or method docstring
      "C0114",  # Missing module docstring
      "C0115",  # Missing class docstring
      "W0621",  # Redefining name %r from outer scope (line %s) (we need this for our logging)
      "R0913",  # Too many arguments
      "R0801",  # Similar lines in %s files (we will have this because of how serverless functions need to be self-contained)
      "W0511",  # TODO
    ]
ignore = [
    "tests"
    ]

[tool.pytest.ini_options]
testpaths = ["multi_x_serverless/tests"]
addopts = [
      "--cov=multi_x_serverless",
      "--cov-report=html",
    ]